--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@babel/standalone": "^7.23.10",
     "field-metadata": "*",
-    "vue": "^3.4.15"
+    "lodash": "^4.17.21",
+    "vue": "~3.3.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
     "@rushstack/eslint-patch": "^1.3.3",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__standalone": "^7.1.7",
+    "@types/lodash": "^4.14.202",
     "@vitejs/plugin-vue": "^4.6.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "eslint": "^8.49.0",
