--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
+    "@jetblack/operator-overloading": "^0.2.0",
     "@rushstack/eslint-patch": "^1.3.3",
     "@types/babel__core": "^7.20.5",
     "@types/babel__standalone": "^7.1.7",
@@ -32,6 +33,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "typescript": "^5.3.3",
     "vite": "^4.5.2",
+    "vite-plugin-babel": "^1.2.0",
     "vue-tsc": "^1.8.27"
   }
 }
