--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "vite",
     "build": "vite build && npm run type",
     "preview": "vite preview",
-    "type": "tsc -declaration --emitDeclarationOnly",
+    "type": "tsc -declaration --emitDeclarationOnly && tsc-alias",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
@@ -31,6 +31,7 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "tsc-alias": "^1.8.8",
     "typescript": "^5.3.3",
     "vite": "^4.5.2",
     "vite-plugin-babel": "^1.2.0",
