--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
 
     "declaration": true
   },
-  "include": ["lib/**/*.ts", "lib/**/*.tsx", "lib/**/*.vue"],
+  "include": ["lib/**/*.ts", "lib/**/*.tsx", "lib/**/*.vue", "../dicloud/src/fs.ts", "../dicloud/src/types/window.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
