--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/standalone": "^7.23.10",
     "field-metadata": "*",
     "lodash": "^4.17.21",
+    "modern-screenshot": "^4.4.38",
     "vue": "~3.3.4"
   },
   "devDependencies": {
